# activite-deputes

./: .gitignore  Cargo.toml  README.md  mobile-feature.patch
.github/workflows/: deploy.yml  pipeline-deploy.yml  update-data.yml
docs/: 404.html  frontend-25b634df262e8ace.js  frontend-27db6f816af31364.js  frontend-29e79ad5d93656b1.js  frontend-619599bb946f1575.js  frontend-975b11bb10169bb5.js  frontend-9841631891889f68.js  frontend-9b8ec8952847165a.js  frontend-c0035e1c40f4a667.js  frontend-e4aae1b8d634d872.js  index.html
docs/data/: deputes.json  deputes_P30.json  deputes_p1.json  deputes_p2.json  deputes_p3.json  dossiers_min.json  status.json
docs/data/amendements/: index.json  undated.json
docs/data/amendements/months/: 2024-09.json  2024-10.json  2024-11.json  2024-12.json  2025-01.json  2025-02.json  2025-03.json  2025-04.json  2025-05.json  2025-06.json  (+8 more)
docs/exports/: deputes_activity_LEG.csv  deputes_activity_P180.csv  deputes_activity_P30.csv
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  lib.rs  models.rs  store.rs  utils.rs
frontend/src/components/: kpi_card.rs  layout.rs  mod.rs  period_selector.rs  rate_bar.rs  skeleton.rs  tooltip.rs
frontend/src/pages/: amendements.rs  comparer.rs  depute.rs  exporter.rs  home.rs  methodologie.rs  mod.rs  positions_groupes.rs  reseau.rs  stats_globales.rs
pipeline/: Cargo.toml
pipeline/src/: aggregator.rs  downloader.rs  exporter.rs  group_ppl_v1.rs  main.rs  models.rs  parser.rs
site-dev/: frontend-93a3ad3d94925f75.js  index.html
site-dev/exports/: deputes_activity_LEG.csv  deputes_activity_P180.csv
site/data/: deputes_P30.json  status.json
site/exports/: deputes_activity_P30.csv
(+762 files in other folders)
