[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlAnchorElement", "Event",
    "RequestInit", "Request", "Response", "Headers",
    "Storage", "console", "HtmlInputElement",
    "HtmlSelectElement", "ScrollToOptions", "ScrollBehavior",
    "MediaQueryList", "Location",
    "KeyboardEvent", "MouseEvent", "EventTarget",
    "Blob", "BlobPropertyBag", "Url",
    "CssStyleDeclaration", "Element", "HtmlBodyElement"
] }
js-sys = "0.3"
gloo-net = { version = "0.4", features = ["http"] }
gloo-utils = "0.2"
leptos_router = { version = "0.6", features = ["csr"] }
futures = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
