[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipeline"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
